# aicli

./: .clang-format  .clang-tidy  .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure.ac
.github/: copilot-instructions.md
docs/: design.md  execute.md
include/: Makefile.am  aicli.h  aicli_config.h  aicli_config_file.h  allowlist_list_tool.h  auto_search.h  brave_search.h  buf.h  cli.h  config.h  continue_state.h  execute_dsl.h  execute_tool.h  google_search.h  openai_responses.h  openai_tool_loop.h  paging_cache.h  path_util.h  threadpool.h  web_fetch_tool.h  web_search_tool.h  web_tools.h
include/execute/: allowlist.h  dispatch.h  file_reader.h  paging.h  pipeline_stages.h  run_from_file.h
m4/: ax_pthread.m4
man/: aicli.1
scripts/: qa.sh
src/: Makefile.am  allowlist_list_tool.c  auto_search.c  brave_search.c  buf.c  cli.c  config.c  config_file.c  continue_state.c  execute_dsl.c  execute_tool.c  execute_tool_impl.c  google_search.c  main.c  openai_responses.c  openai_tool_loop.c  paging_cache.c  path_util.c  threadpool.c  web_fetch_tool.c  web_search_tool.c  web_tools.c
src/execute/: allowlist.c  dispatch.c  file_reader.c  paging.c  pipeline_stages.c  run_from_file.c
tests/: Makefile.am  run_tests.sh
